Fix layout bug in details area

--- a/client/master.css
+++ b/client/master.css
@@ -169,6 +169,7 @@ label {
 	font-weight: 300;
 	font-size: 1.5em;
 	color: #777;
+	display: block;
 }
 
 #rsvp-yes {
